Fix Docker build: exclude macOS resource fork files
- Add ._* pattern to .dockerignore to exclude macOS resource fork files
- Remove existing ._* files from project
- These files were causing CS2015 errors during Docker build

--- a/.dockerignore
+++ b/.dockerignore
@@ -26,6 +26,11 @@ logs/
 .DS_Store
 Thumbs.db
 
+# macOS resource fork files (these are the culprits!)
+._*
+**/.DS_Store
+**/._*
+
 # Git
 .git/
 .gitignore
