--- a/InvestmentTracker/appsettings.Development.json
+++ b/InvestmentTracker/appsettings.Development.json
@@ -1,10 +1,13 @@
 {
   "DetailedErrors": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=finapp_dev;Username=finapp;Password=finapp123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   }
 }
