--- a/InvestmentTracker/appsettings.json
+++ b/InvestmentTracker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=investmenttracker.db"
+    "DefaultConnection": "Host=localhost;Database=finapp;Username=finapp;Password=finapp123"
   }
 }
