Replace hardcoded passwords with environment variables

--- a/InvestmentTracker/appsettings.json
+++ b/InvestmentTracker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=finapp;Username=finapp;Password=finapp123"
+    "DefaultConnection": "Host=localhost;Database=finapp;Username=finapp;Password=${POSTGRES_PASSWORD}"
   }
 }
