investment provider implementation

--- a/InvestmentTracker/appsettings.Development.json
+++ b/InvestmentTracker/appsettings.Development.json
@@ -9,5 +9,6 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
-  }
+  },
+  "BackfillProvidersOnStartup": true
 }
