--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -30,6 +30,9 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:5000
+      - DATAPROTECTION__KEY_DIRECTORY=/keys
+    volumes:
+      - dataprotection_keys:/keys
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000"]
@@ -49,4 +52,6 @@ networks:
 
 volumes:
   postgres_data:
+    driver: local
+  dataprotection_keys:
     driver: local
