--- a/InvestmentTracker/InvestmentTracker.csproj
+++ b/InvestmentTracker/InvestmentTracker.csproj
@@ -14,6 +14,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+        <PackageReference Include="YamlDotNet" Version="15.3.0" />
     </ItemGroup>
 
 </Project>
