update the kb immport profile

--- a/InvestmentTracker/ImportProfiles/kb.yaml
+++ b/InvestmentTracker/ImportProfiles/kb.yaml
@@ -80,4 +80,5 @@ expenseFieldMappings:
   - field: memo
     sourceHeaders:
       - "Popis pro me"
+      - "Zprava pro prijemce"
     target: memo
