--- a/InvestmentTracker/InvestmentTracker.csproj
+++ b/InvestmentTracker/InvestmentTracker.csproj
@@ -18,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="ImportProfiles\**\*">
+        <Content Update="ImportProfiles\**\*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
         </Content>
